# drawing-agent

./: .env.txt  .gitignore  LICENSE.md  Makefile  README.md  diagnose_data.py  ds_zero2.json  pyproject.toml  requirements.in  requirements.txt
configs/: dataset.figures.yaml  dataset.yaml  figures.yaml  training.sdxl-qlora.yaml  training.test.yaml
configs/accelerate/: default_config.yaml
docs/: blueprint.md  research-notes.md
issues/: issues.yaml
scripts/: process_uspto.sh  run_finetune.sh  setup_environment.sh  test_setup.sh
src/tools/: make_captions_from_jsonl.py
src/training/: __init__.py  build_dataset.py  control.py  db_admin.py  db_utils.py  img_norm.py  index.sqlite  index_docs.py  init_db.py  load_fts.py  parse_xml.py  prompt.py  schema.sql
src/tuning/: __init__.py  cli.py  config.py  dataset.py  image_processing.py  patent_figures.py  preprocess.py  test_single_patent.py  test_trained_model.py  training.py  utils.py  xml_parser.py
wandb/: latest-run
wandb/run-20251030_023453-8kw9frte/: run-8kw9frte.wandb
wandb/run-20251030_023453-8kw9frte/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251030_143800-rk9b2ogv/: run-rk9b2ogv.wandb
wandb/run-20251030_143800-rk9b2ogv/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251031_003610-gse2dqhi/: run-gse2dqhi.wandb
wandb/run-20251031_003610-gse2dqhi/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
