[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawing-agent"
version = "0.1.0"
description = "SDXL QLoRA Fine-Tuning for Patent-Style Technical Drawings"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "proprietary"}
authors = [
    {name = "Phaethon Order LLC", email = "admin@phaethon.llc"},
]
keywords = [
    "machine-learning",
    "stable-diffusion",
    "patent-drawings",
    "computer-vision",
    "text-to-image",
    "lora",
    "qlora",
    "fine-tuning",
    "controlnet",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: proprietary",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "accelerate>=1.11.0",
    "aiohttp>=3.13.1",
    "bitsandbytes>=0.42.0",
    "click>=8.3.0",
    "datasets>=4.3.0",
    "diffusers>=0.35.2",
    "huggingface-hub>=0.36.0",
    "imageio>=2.37.0",
    "lxml>=6.0.2",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "PyYAML>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "safetensors>=0.6.2",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
training = [
    "xformers>=0.0.28",
    "flash-attn>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/aonanj/drawing-agent"
Repository = "https://github.com/aonanj/drawing-agent"
Issues = "https://github.com/aonanj/drawing-agent/issues"

[project.scripts]
# CLI entry points for training scripts
build-dataset = "training.build_dataset:main"
parse-xml = "training.parse_xml:main"
index-docs = "training.index_docs:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["training"]

[tool.setuptools.package-data]
training = ["*.sql"]

[tool.black]
line-length = 150
target-version = ['py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | wandb
  | outputs
  | logs
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["training"]
known_third_party = [
    "torch",
    "transformers",
    "diffusers",
    "peft",
    "accelerate",
    "datasets",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "PIL.*",
    "lxml.*",
    "skimage.*",
    "diffusers.*",
    "peft.*",
    "accelerate.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
